# llm-lab

./: .gitignore  .pre-commit-config.yaml  DEPENDENCY_UPDATE_SUMMARY.md  LICENSE  README.md  environment.yml  environment_unified.yml  pyproject.toml  requirements.txt  setup_unified_env.sh  test_dependencies.py
.github/workflows/: ci.yml
dev/colab/: Hybrid-Colab-SSH-Development-Setup.md  README_COLAB_INIT.md  colab_init.py
docs/: CHANGELOG-DOCS.md  README.md  REORGANIZATION_SUMMARY.md  REORGANIZATION_VISUAL.md  quick-start.md
docs/LLM/: NAMING_CONVENTION.md  README.md
docs/LLM/eval/: evaluation_metrics  evaluation_metrics.md
docs/LLM/llm_tech_evolution/: llm_tech_history.md  llm_tech_history.tex
docs/LLM/memory/: how_memory_works  how_memory_works.md  how_memory_works.tex
docs/LLM/training_and_evaluation/: rlhf-methodology.md  summary.md
docs/runpods/: project_setup_on_new_pod.md
docs/setup/: dependencies.md  environment-setup.md  github-setup.md  installation.md  latex-setup.md
docs/workflows/: document-workflow.md  markdown-to-pdf-workflow.md
examples/: run_pretraining.py
posttrain_llm/L3/: Lesson_3.ipynb  download_models.py  fix_model_paths.py  helper.py
posttrain_llm/L5/: Lesson_5.ipynb
posttrain_llm/L7/: Lesson_7.ipynb
posttrain_llm/L7/assets/: README.md
posttrain_llm/M1/: CHANGELOG.md  CHANGES_SUMMARY.md  COLAB_SETUP.md  DEVICE_USAGE_GUIDE.md  M1_G1_Inspecting_Finetuned_vs_Base_Model.ipynb  M1_G1_Inspecting_Finetuned_vs_Base_Model.py  M1_G1_Inspecting_Finetuned_vs_Base_Model_v0.ipynb  README_DEVICE_SUPPORT.md  README_EVALUATION.md  REFACTORING_SUMMARY.md  TESTING_REPORT.md  VSCODE_COLAB_GUIDE.md  download_models.py  run_evaluation.py  test_device_support.py  test_model_download.py  test_run_evaluation.py
posttrain_llm/docs/: README.md  transformers-tutorial.md
posttrain_llm/dpo_trainer/: README.md  __init__.py  __main__.py  cli.py
posttrain_llm/llm_eval/: PACKAGE_SUMMARY.md  QUICK_START.md  README.md  __init__.py  setup.py
posttrain_llm/online_rl_trainer/: README.md  __init__.py
posttrain_llm/sft_trainer/: README.md  __init__.py  __main__.py  cli.py  setup.py
pretrain_llm/: INTEGRATION_SUMMARY.md  Lesson_1.ipynb  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  download_models.py
pretrain_llm/docs/: README.md  environment-integration.md  model-downloading-guide.md  usage-examples.md
scripts/: README.md  README_COLAB_SYNC.md  md_to_pdf.py  md_to_pdf_v0.py  sync_from_colab.py  sync_to_colab.py  sync_work.py
src/llm_lab/: __init__.py  cli.py  config.py
tests/: test_cli.py  test_imports.py
(+69 files in other folders)
